# snake-cpp

./: .gitignore  CMakeLists.txt  README.md  configure.bat
src/: main.cpp
